hello-world-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ahmad-app
  labels:
    app: http_helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http_helloworld
  template:
    metadata:
      labels:
        app: http_helloworld
    spec:
      containers:
      - name: webserver
        image: abacchus/apache:v1.0.0
        ports:
        - containerPort: 80
