helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Ahmad-HelloWorld-Deployment
  labels:
    app: http_helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http_helloworld
  template:
    metadata:
      labels:
        app: http_helloworld
    spec:
      containers:
      - name: tutum
        image: tutum/hello-world
        ports:
        - containerPort: 80
