hello-world-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ahmad-endpoint
subsets:
  - addresses:
      - ip: 1.2.3.4
    ports:
      - port: 80
