hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ahmad-service
spec:
  selector:
    app: http_helloworld
  ports:
  - protocol: TCP
    port: 80
    targetPort: 31528
  type: NodePort
