hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ahmad-ingress
spec:
  backend:
    serviceName: ahmadhttp
    servicePort: 80
